--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,11 @@
 {
   "manifest_version": 3,
   "name": "ChatGPT Accent Customizer",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Override ChatGPT's accent and chat bubble colors using CSS variables.",
   "permissions": ["storage"],
   "host_permissions": [
-    "https://chatgpt.com/*",
-    "https://chat.openai.com/*"
+    "https://chatgpt.com/*"
   ],
   "action": {
     "default_title": "ChatGPT Accent",
@@ -14,7 +13,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://chatgpt.com/*", "https://chat.openai.com/*"],
+      "matches": ["https://chatgpt.com/*"],
       "js": ["content.js"],
       "run_at": "document_start"
     }
